--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,82 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+      monospace;
+  }
+  
+  .container {
+    margin: 3em;
+  }
+  
+  .button {
+    color: white;
+    background-color: #0bc98d;
+    padding: 1.1em 2em;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    transition: 0.1s;
+  }
+  
+  .button:hover {
+    background-color: #0ba95d;
+  }
+  
+  hr {
+    border: none;
+    border-bottom: 1px solid #0b2533;
+    margin: 2em 0;
+  }
+  
+  .textInput {
+    color: #333;
+    outline-color: #0bc98d;
+    padding: 1em;
+    margin-right: 1em;
+    width: 300px;
+    font-size: 14px;
+  }
+  
+  .table {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+  }
+  
+  .tableRow {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em 3em;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  .tableRow > div {
+    flex: 1;
+  }
+  
+  .tableRow > div:nth-child(2),
+  .tableRow > div:nth-child(4) {
+    flex: 3.5;
+  }
+  
+  .table .heading > div {
+    font-weight: bold;
+  }
+  
+  .tableRow:last-child {
+    border-bottom: none;
+  }
+  
+  .tableRow:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+  
